--- a/01_Introduction/03_Software_Primer.Rmd
+++ b/01_Introduction/03_Software_Primer.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Software Primer"
 output: html_document
-bibliography: ../../bib/book.bib 
+bibliography: ../bib/book.bib 
 ---
 
 <!-- note do_bookdown is set in index.rmd, so we know if you're running just this .Rmd or compiling the book-->
@@ -21,7 +21,7 @@ source("scripts/before_chapter_script.R")
 
 <!-- make sure to rename the section title below -->
 
-```{r section_title, echo = FALSE, output = FALSE, purl = FALSE}
+```{r software_primer, echo = FALSE, output = FALSE, purl = FALSE}
 # run the diagnosis (set to TRUE) on your computer for this section only before pushing to Github. no diagnosis will ever take place on github.
 do_diagnosis <- FALSE
 sims <- 100
