--- a/02_Declaration_Diagnosis_in_Practice/04_Crafting_a_Data_Strategy.Rmd
+++ b/02_Declaration_Diagnosis_in_Practice/04_Crafting_a_Data_Strategy.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Inference about unobserved variables "
+title: "Crafting a data strategy"
 output: html_document
-bibliography: ../../bib/book.bib 
+bibliography: ../bib/book.bib 
 ---
 
 <!-- note do_bookdown is set in index.rmd, so we know if you're running just this .Rmd or compiling the book-->
@@ -17,11 +17,11 @@ source("scripts/before_chapter_script.R")
 
 <!-- start post here, do not edit above -->
 
-## Inference about unobserved variables 
+# Crafting a data strategy
 
 <!-- make sure to rename the section title below -->
 
-```{r inference_about_unobserved_variables, echo = FALSE, output = FALSE, purl = FALSE}
+```{r crafting_a_data_strategy, echo = FALSE, output = FALSE, purl = FALSE}
 # run the diagnosis (set to TRUE) on your computer for this section only before pushing to Github. no diagnosis will ever take place on github.
 do_diagnosis <- FALSE
 sims <- 100
@@ -32,7 +32,8 @@ b_sims <- 20
 # load packages for this section here. note many (DD, tidyverse) are already available, see scripts/package-list.R
 ```
 
-<!-- (systematic and nonsystematic measurement error) -->
+
+
 
 
 
