--- a/03_Design_Library/01_Observational_Descriptive/02_Multilevel_Regression_and_Postratification.Rmd
+++ b/03_Design_Library/01_Observational_Descriptive/02_Multilevel_Regression_and_Postratification.Rmd
@@ -21,7 +21,7 @@ source("scripts/before_chapter_script.R")
 
 <!-- make sure to rename the section title below -->
 
-```{r mrp, echo = FALSE, output = FALSE, purl = FALSE}
+```{r multilevel_regression_and_poststratification, echo = FALSE, output = FALSE, purl = FALSE}
 # run the diagnosis (set to TRUE) on your computer for this section only before pushing to Github. no diagnosis will ever take place on github.
 do_diagnosis <- FALSE
 sims <- 100
