--- a/03_Design_Library/06_Multi_Study_Designs/02_Metaketa.Rmd
+++ b/03_Design_Library/06_Multi_Study_Designs/02_Metaketa.Rmd
@@ -1,1 +1,69 @@
+---
+title: "Multi-site studies"
+output: html_document
+bibliography: ../../bib/book.bib 
+---
+
+<!-- note do_bookdown is set in index.rmd, so we know if you're running just this .Rmd or compiling the book-->
+```{r, eval = !exists("do_bookdown"), echo = FALSE, include = FALSE, purl = FALSE}
+knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, cache = FALSE)
+knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file()) # files are all relative to RStudio project home
+```
+
+```{r, eval = !exists("do_bookdown"), echo = FALSE, include = FALSE, purl = FALSE}
+# load common packages, set ggplot ddtheme, etc.
+source("scripts/before_chapter_script.R")
+```
+
+<!-- start post here, do not edit above -->
+
 ## Multi-site studies
+
+<!-- make sure to rename the section title below -->
+
+```{r multi_site_studies, echo = FALSE, output = FALSE, purl = FALSE}
+# run the diagnosis (set to TRUE) on your computer for this section only before pushing to Github. no diagnosis will ever take place on github.
+do_diagnosis <- FALSE
+sims <- 100
+b_sims <- 20
+```
+
+```{r, echo = FALSE}
+# load packages for this section here. note many (DD, tidyverse) are already available, see scripts/package-list.R
+library(blockTools)
+```
+
+You can use the global bib file via rmarkdown cites like this: @imai2008
+
+```{r}
+design <-
+  declare_population(N = 100, u = rnorm(N)) +
+  declare_potential_outcomes(Y ~ Z + u) +
+  declare_assignment(prob = 0.5) +
+  declare_reveal(Y, Z) +
+  declare_estimator(Y ~ Z, model = difference_in_means)
+```
+
+
+This chunk is set to `echo = TRUE` and `eval = do_diagnosis`
+```{r, eval = do_diagnosis & !exists("do_bookdown")}
+simulations_pilot <- simulate_design(design, sims = sims)
+```
+
+Right after you do simulations, you want to save the simulations rds. 
+
+```{r, echo = FALSE, purl = FALSE}
+# figure out where the dropbox path is, create the directory if it doesn't exist, and name the RDS file
+rds_file_path <- paste0(get_dropbox_path("section_template"), "/simulations_pilot.RDS")
+if (do_diagnosis & !exists("do_bookdown")) {
+  write_rds(simulations_pilot, path = rds_file_path)
+}
+simulations_pilot <- read_rds(rds_file_path)
+```
+
+Now all that simulating, saving, and loading is done, and we can use the simulations for whatever you want.
+
+```{r}
+kable(head(simulations_pilot))
+```
+
