--- a/03_Design_Library/02_Experimental_Descriptive/02_Sensitive_Questions.Rmd
+++ b/03_Design_Library/02_Experimental_Descriptive/02_Sensitive_Questions.Rmd
@@ -22,7 +22,7 @@ source("scripts/before_chapter_script.R")
 
 ### List experiments
 
-```{r, echo = FALSE, output = FALSE, purl = FALSE}
+```{r sensitive_questions, echo = FALSE, output = FALSE, purl = FALSE}
 # run the diagnosis (set to TRUE) on your computer for this section only before pushing to Github. no diagnosis will ever take place on github.
 do_diagnosis <- FALSE
 sims <- 500
