--- a/03_Design_Library/04_Experimental_Causal/06_Partial_population_Design.Rmd
+++ b/03_Design_Library/04_Experimental_Causal/06_Partial_population_Design.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Multiarm Designs"
+title: "Partial Population Design"
 output: html_document
 bibliography: ../../bib/book.bib 
 ---
@@ -17,11 +17,11 @@ source("scripts/before_chapter_script.R")
 
 <!-- start post here, do not edit above -->
 
-## Multiarm Designs
+## Partial Population Design
 
 <!-- make sure to rename the section title below -->
 
-```{r multiarm_design, echo = FALSE, output = FALSE, purl = FALSE}
+```{r partial_population_design, echo = FALSE, output = FALSE, purl = FALSE}
 # run the diagnosis (set to TRUE) on your computer for this section only before pushing to Github. no diagnosis will ever take place on github.
 do_diagnosis <- FALSE
 sims <- 100
@@ -67,3 +67,10 @@ Now all that simulating, saving, and loading is done, and we can use the simulat
 kable(head(simulations_pilot))
 ```
 
+
+
+
+
+
+
+## Partial population design for spillover analysis
