small to putting designs to use

--- a/04_Conclusion/01_Putting_Designs_to_Use.Rmd
+++ b/04_Conclusion/01_Putting_Designs_to_Use.Rmd
@@ -59,5 +59,7 @@ Multi-site studies – take a design from another study and use it for another o
 Knowledge accumulation
 
 
-## A library of research designs as objects
+## Improving designs in the social sciences
+
+### A library of research designs as objects
 
