--- a/03_Design_Library/05_Observational_Causal/06_Synthetic_Control.Rmd
+++ b/03_Design_Library/05_Observational_Causal/06_Synthetic_Control.Rmd
@@ -23,7 +23,7 @@ source("scripts/before_chapter_script.R")
 
 ```{r synthetic_control, echo = FALSE, output = FALSE, purl = FALSE}
 # run the diagnosis (set to TRUE) on your computer for this section only before pushing to Github. no diagnosis will ever take place on github.
-do_diagnosis <- TRUE
+do_diagnosis <- FALSE
 sims <- 100
 b_sims <- 20
 ```
