--- a/02_Declaration_Diagnosis_in_Practice/03_Defining_the_Inquiry.Rmd
+++ b/02_Declaration_Diagnosis_in_Practice/03_Defining_the_Inquiry.Rmd
@@ -17,8 +17,6 @@ source("scripts/before_chapter_script.R")
 
 <!-- start post here, do not edit above -->
 
-# Defining the inquiry
-
 <!-- make sure to rename the section title below -->
 
 ```{r defining_the_inquiry, echo = FALSE, output = FALSE, purl = FALSE}
@@ -28,40 +26,8 @@ sims <- 100
 b_sims <- 20
 ```
 
-```{r, echo = FALSE}
-# load packages for this section here. note many (DD, tidyverse) are already available, see scripts/package-list.R
-```
-
-
----
-title: "Defining the Inquiry"
-output: html_document
-bibliography: ../../bib/book.bib 
----
-
-
-```{r, eval = !exists("do_bookdown"), echo = FALSE, include = FALSE, purl = FALSE}
-knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, cache = FALSE)
-knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file()) # files are all relative to RStudio project home
-```
-
-```{r, eval = !exists("do_bookdown"), echo = FALSE, include = FALSE, purl = FALSE}
-# load common packages, set ggplot ddtheme, etc.
-source("scripts/before_chapter_script.R")
-```
-
-<!-- start post here, do not edit above -->
-
 # Defining the Inquiry
 
-<!-- make sure to rename the section title below -->
-
-```{r MIDA-inquiry, echo = FALSE, output = FALSE, purl = FALSE}
-# run the diagnosis (set to TRUE) on your computer for this section only before pushing to Github. no diagnosis will ever take place on github.
-do_diagnosis <- FALSE
-sims <- 100
-b_sims <- 20
-```
 
 ```{r, echo = FALSE}
 # load packages for this section here. note many (DD, tidyverse) are already available, see scripts/package-list.R
@@ -92,14 +58,24 @@ plot(dagitty::graphLayout(dagitty("dag{
  }")))
 ```
 
+ADD NUMBERS WITH POTENTIAL OUTCOMES
+
+USE ONLY PO NOTATION
 
 ### Descriptive estimands
 
 Descriptive estimands can also require inference, not simply measurement. 
 
+Simplest case level estimand:
+
+$$X = 1$$
+"Yes"
+
 An example of a descriptive estimand is:
 
-$$\Pr(Y=1 | X=1)$$
+$$E_{i\in N}(Y)$$
+
+$$E_{i\in N}(Y | X=1)$$
 
 This descriptive estimand is to be distinguished from the counterfactual estimand:
 
@@ -108,9 +84,11 @@ $$\Pr(Y=1 | X \leftarrow 1)$$
 
 where $\leftarrow$ is interpreted to mean that $X$ is "set" to the indicated value. 
 
+* Moments; covariance 
+
 ### Simple causal estimands
 
-The simplest causal estimand is the outcome that a unit (or group) would have under a possibly counterfactual condition. The **potential outcome**:
+The simplest causal estimand is the outcome that a unit (or group) would have under a possibly counterfactual condition. The expected **potential outcome**:
 
 $$\Pr(Y=1 | X \leftarrow 1)$$
 
@@ -127,22 +105,38 @@ These simple estimands might condition on observational quantities, giving rise 
 
 $$\Pr(Y=1 | X \leftarrow 1, M = 1) - \Pr(Y=1 | X \leftarrow 0, M = 1)$$
 
-or, perhaps,  **controlled average treatment effects**:
+or, perhaps,  **controlled conditional average treatment effects**:
 
 $$\Pr(Y=1 | X \leftarrow 1, M \leftarrow 1) - \Pr(Y=1 | X \leftarrow 0, M \leftarrow 1)$$
 
 or, perhaps *differences* in effects:
 
-### Complex counterfactuals
 
-### Local estimands
+**Causes of effects** estimand:
 
-### Parametric estimands
+
+### Local estimands / EStiamnds over latent classes, principal strata
+
+Complier average is also a CATE
+RDD is also a CATE
+Estimands as summaries
 
 ### Study dependent estimands
 Expected ATT vs realized ATT
 
-### Vector-valued inquiries (set of predictions for N units), i.e. the CEF
+### Complex counterfactuals
+
+
+### Parametric estimands
+
+Dimensionality reduction
+Model parameters
+
+### Vector-valued inquiries (set of predictions for N units), 
+
+The diagnostic statistic is ith respect to the vector
+
+e.g. the CEF
 
 QCA estimand.
 
@@ -156,9 +150,10 @@ QCA estimand.
 
 ### Estimands to purpose. Choice of inquiry is not valueless
 
-### Implication of estimand definition for analysis
 
 ### Estimand scope:What is the set of units which you want to learn the answer about? Know what ATE averages over
+
+Implication of estimand definition for analysis
 
 ### Unknown estimands: Inquiries for discovery
 
