--- a/01_Introduction/02_MIDA.Rmd
+++ b/01_Introduction/02_MIDA.Rmd
@@ -31,14 +31,41 @@ library(blockTools)
 
 # MIDA
 
-Research designs are the procedures we use to learn about the world as we imagine it. Research designs vary according to how we imagine the world, the questions we want answer, the information we collect, and how we summarize the information in order to yield an answer. 
+Research designs are procedures we apply to the world in order to learn about it. Selecting strong research designs requires us to understand the properties of those procedures in terms of their ability to generate credible answers to theoretically important questions.  
+
+Our understanding of research designs is rooted in the "MIDA" framework. MIDA stands for "model," "inquiry," "data strategy," and "answer strategy." Loosely speaking, the model is how we imagine the world and the inquiry is the question we want to answer about the world, given how we imagine it. The data strategy includes all the processes by which we obtain information from the world and the answer strategy includes everything we do with that information in order to generate an answer to the question. If you can describe and understand these four parts of a design, you can characterize whether the design is a good one. We think this framework applies to nearly every kind of empirical research strategy: qualitative and quantitative, observational and experimental, descriptive and causal. We hope to convince you that even though the framework is very broad and can help to illuminate many empirical approaches, it is not so flexible as to be meaningless. Understanding the distinctions and connections across these four dimensions can help sharpen and refine our procedures in order to produce better research in the future than we have done in the past.
+
+The first two components of a design -- the model and the inquiry -- are theoretical. The model of the world that is in researchers minds may correspond to the real world more or less well, but the model is certainly not the same thing as the real world. The model simplifies the world into kinds of units, types of measurements, and beliefs about causal relationships. Models can be more or less specific. They are what is represented in the "theory" section of empirical research papers. While it may seem like empirical research is entirely agnostic and model-free, this is not so. In order to understand what the variables in a dataset even mean, researchers have to bring to bear background beliefs about the meanings of and interrelations between pieces of information. A key part of many research design processes is revealing how assumptions about the world are part of researchers' implicit theoretical models of the world.
+
+The inquiry is a question expressed in terms of the model. Because the inquiry can only be expressed in model terms, it is also theoretical. If the model specifies that there are two kinds of people (people who are women and people who are not women) and that all people have heights, then we can ask questions like what is the median height of all people? What is the mean height of people who are women? What is the average difference in heights between those who are women and those who are not? Without concepts like "woman" and "height" that are part of the model, we cannot specify an inquiry.  
+
+
+
+By contrast, the second two components of a research design - the data strategy and answer strategy - take place in the real world and are not theoretical. The data strategy describes how the research will obtain new information, so includes choices like case selection, sampling procedures, randomization protocols, questionaire design, participant observation techniques, and the like. The answer strategy is how you process the new information. The answer strategy is more than just the choice of estimator -- it's the full set of choices that map the data into the table and figures in the report. For quantitative designs, these choices include how "raw data" are processed into "clean data," which estimators will be applied, and which results will be presented. For qualitative designs, the answer strategy includes procedures for summarizing interviews, field notes, or original source documents. 
+
+
+These four components correspond to how we imagine the world; given how we imagine the world, the questions we want answer about it; 
+
+
+
+
+<!--
+Strong research designs yield credible answers to important theoretical questions with a minimum of auxilliary assumptions. Weak research designs produce biased, noisy, or irrelevant answers that depend on unverfiable or incredible assumptions. 
+--->
+
+
+
+
+
 
 Interviews, surveys, case studies, randomized experiments, laboratory games, [etc], are all research designs
 
 All empirical research designs gather and analyze information in order to answer a question about the world, stated in terms of a background model. 
 
 
-These four features form the basis of the "MIDA" framework that we will rely on to describe designs. MIDA stands for "model," "inquiry," "data strategy," and "answer strategy." The first two components of a design are theoretical. The model of the world that is in researchers minds may correspond to the real world more or less well, but the model is certainly not the same thing as the real world. The inquiry is a question about the world, expressed in terms of the model. Because the inquiry can only be expressed in model terms, it is also theoretical. By contrast, the second two components of a research design - the data strategy and answer strategy - take place in the real world and are not theoretical. The data strategy describes how the research will obtain new information, so includes choices like case selection, sampling procedures, randomization protocols, questionaire design, participant observation techniques, and the like. The answer strategy is how you process the new information. The answer strategy is more than just the choice of estimator -- it's the full set of choices that map the data into the table and figures in the report. For quantitative designs, these choices include how "raw data" are processed into "clean data," which estimators will be applied, and which results will be presented. For qualitative designs, the answer strategy includes procedures for summarizing interviews, field notes, or original source documents. 
+These four features form the basis of the "MIDA" framework that we will rely on to describe designs. 
+
+
 
 Formally, we defined a causal \textbf{model}, $M$, of how the world works, following Pearl's definition of a probabilistic causal model \citep{Pearl2009}. A casual model itself is made up of three components: 
 
